--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,48 +1,52 @@
+# Free topology pipeline example with 6 blocks:
+#
+#  A - B - C
+#    /   \
+#  D       E - F
+#
 version: v1.0
-name: Checking dependencies
+name: Free topology - complex topology
 agent:
   machine:
     type: e1-standard-2
-    os_image: ubuntu1804
+    os_image: ubuntu1604
 
 blocks:
-  - name: "Build"
-    task:
-      env_vars:
-        - name: APP_ENV
-          value: prod
-      jobs:
-      - name: Docker build
-        commands:
-          - checkout
-          - ls -1
-          - echo $APP_ENV
-          - echo "Docker build..."
-          - echo "done"
-
-  - name: "Smoke tests"
+  - name: A
+    # Empty array means "no dependencies" -> start immediately
+    dependencies: []
     task:
       jobs:
-      - name: Smoke
-        commands:
-          - checkout
-          - echo "make smoke"
+        - commands: [echo foo]
 
-  - name: "Unit tests"
+  - name: B
+    dependencies: [A, D]
     task:
       jobs:
-      - name: RSpec
-        commands:
-          - checkout
-          - echo "make rspec"
+        - commands: [echo bar]
 
-      - name: Lint code
-        commands:
-          - checkout
-          - echo "make lint"
+  - name: C
+    dependencies: [B]
+    task:
+      jobs:
+        - commands: [echo baz]
 
-      - name: Check security
-        commands:
-          - checkout
-          - echo "make security"
+  - name: D
+    # Empty array means "no dependencies" -> start immediately
+    dependencies: []
+    task:
+      jobs:
+        - commands: [echo foo-bar]
+
+  - name: E
+    dependencies: [B]
+    task:
+      jobs:
+        - commands: [echo E]
+
+  - name: F
+    dependencies: [E]
+    task:
+      jobs:
+        - commands: [echo F]
 
