Job B dependencies as a list

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -21,7 +21,9 @@ blocks:
              - echo foo
 
   - name: B
-    dependencies: [A, D]
+    dependencies:
+		- A
+		- D
     task:
       jobs:
         - name: Job B
